Add search_index API route
