# pwa/app/api/v3.ts
@@ -1007,6 +1007,16 @@ export type LeaderboardInsight = {
   /** Year the insight was measured in (year=0 for overall insights). */
   year: number;
 };
+export type SearchIndex = {
+  teams: {
+    key: string;
+    nickname: string;
+  }[];
+  events: {
+    key: string;
+    name: string;
+  }[];
+};
 /**
  * Returns API status, and TBA status information.
  */
@@ -3711,6 +3721,44 @@ export function getInsightsLeaderboardsYear(
         status: 404;
       }
   >(`/insights/leaderboards/${encodeURIComponent(year)}`, {
+    ...opts,
+    headers: oazapfts.mergeHeaders(opts?.headers, {
+      'If-None-Match': ifNoneMatch,
+    }),
+  });
+}
+/**
+ * Gets a large blob of data that is used on the frontend for searching. May change without notice.
+ */
+export function getSearchIndex(
+  {
+    ifNoneMatch,
+    year,
+  }: {
+    ifNoneMatch?: string;
+    year: number;
+  },
+  opts?: Oazapfts.RequestOpts,
+) {
+  return oazapfts.fetchJson<
+    | {
+        status: 200;
+        data: SearchIndex;
+      }
+    | {
+        status: 304;
+      }
+    | {
+        status: 401;
+        data: {
+          /** Authorization error description. */
+          Error: string;
+        };
+      }
+    | {
+        status: 404;
+      }
+  >('/search_index', {
     ...opts,
     headers: oazapfts.mergeHeaders(opts?.headers, {
       'If-None-Match': ifNoneMatch,
